# horizon5-connect

./: .gitignore  .gitmodules  .markdownlint.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  backtest.py  docker-compose.yml  makefile  optimization.py  production.py  pyproject.toml  router.py  script.py
.claude/: settings.local.json
.claude/agents/: sqx-creator.md
.claude/commands/: create-strategy-from.md  do-coding-review.md  do-linter-fix.md  do-optimization.md  make-strategy.md
.claude/docs/: how-to-run-backtest.md
.claude/skills/: SKILL.md
.cursor/commands/: do_coding_review.md  do_fix.md  do_relase.md  workflows
.cursor/rules/: context.mdc  tasks.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
assets/bnbusdt/: __init__.py
assets/btcusdt/: __init__.py
assets/ethusdt/: __init__.py
assets/ndx/: __init__.py
assets/solusdt/: __init__.py
assets/test_btcusdt/: __init__.py
assets/xauusd/: __init__.py
assets/xrpusdt/: __init__.py
configs/: assets.py  candles.py  constants.py  db.py  exchanges.py  gateways.py  portfolio.py  system.py  timezone.py
docs/clean-code/: assets.md  class-organization.md  classes.md  code-smells.md  formatting.md  helper-definitions.md  helpers.md  interfaces.md  no-comments.md  portfolios.md  services.md  strategies.md  testing.md  tests.md  typings.md
docs/releases/: v0.1.0.md
docs/schemas/: Horizon5 Router API.yaml
enums/: asset_quality_method.py  backtest_command.py  backtest_status.py  command.py  db_command.py  http_status.py  order_event.py  order_side.py  order_status.py  order_type.py  quality_method.py  snapshot_event.py  timeframe.py
helpers/: get_duration.py  get_env.py  get_portfolio_by_path.py  get_progress_between_dates.py  get_slug.py  parse.py  parse_date.py  parse_float.py  parse_percentage.py  parse_timestamp_ms.py
indicators/: __init__.py  ma.py
indicators/adx/: __init__.py
indicators/atr/: __init__.py
indicators/donchian_channel/: __init__.py
indicators/ibs/: __init__.py
indicators/ma/: __init__.py
indicators/price_acceleration/: __init__.py
indicators/price_velocity/: __init__.py
indicators/rsi/: __init__.py
indicators/rsi_bollinger_bands/: __init__.py
indicators/volatility/: __init__.py
interfaces/: analytic.py  asset.py  backtest.py  candle.py  commands.py  exchange.py  gateway.py  gateway_handler.py  indicator.py  orderbook.py  portfolio.py  quality_calculator.py  strategy.py  ticks.py
models/: backtest_expectation.py  backtest_settings.py  candlestick.py  command.py  order.py  portfolio.py  snapshot.py  tick.py  trade.py
portfolios/: bitcoin.py  btc-test.py  donchian-test.py  eth-test.py  ibs-test.py  low-risk.py  portfolio.py  propfirm-test.py  rsi-bb-test.py  sol-test.py  strategy-comparison.py  test_refactor.py  turtle-test.py
providers/: __init__.py
providers/exceptions/: __init__.py
providers/horizon_router/: __index__.py  __init__.py
scripts/: propfirm_optimizer.py  test.py
scripts/binance/: download_candlestick_data.py  download_futures_klines_from_binance.py
scripts/helpers/: logger.sh
scripts/make/: run-linter-checks.sh  run-linter-fixes.sh  run-submodules-push.sh  run-submodules-synchronization.sh  run-tests-e2e.sh  run-tests-integration.sh  run-tests-unit.sh  run-tests.sh
scripts/mongodb/: cleandb.py
services/: asset.py  logging.py  strategy.py
services/analytic/: __init__.py  asset.py  portfolio.py  strategy.py
services/analytics/: __init__.py
structs/: candlestick.py  tick.py  trade.py
(+219 files in other folders)
