[project]
name = "horizon-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "polars[pyarrow]>=1.34.0",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=13.0.0",
    "scikit-learn>=1.7.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pydocstyle>=6.3.0",
    "pyright>=1.1.390",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (fuerza tipado)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN401",  # typing.Any
    "UP045",   # Optional[X] vs X | None
    "UP006",   # list vs List, dict vs Dict
    "UP035",   # typing.List/Dict deprecated
    "UP007",   # Union[X, Y] vs X | Y
    "PLR0913", # Too many arguments in function definition
    "PLR0911", # Too many return statements
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "PLR2004", "PT027", "PTH"]
"scripts/*" = ["ALL"]
"services/analytic/helpers/*" = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pydocstyle]
convention = "pep257"
add-ignore = []
match = "(?!test_).*\\.py"
match-dir = "^(?!(\\.venv|tests|scripts|__pycache__|.git)).*"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
warn_unreachable = true
strict_optional = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = [
    "services",
    "helpers",
    "models",
    "enums",
    "interfaces",
    "configs",
    "indicators",
    "providers",
    "assets",
    "portfolios",
    "strategies",
    "tests",
    "backtest.py",
    "production.py",
]
exclude = [
    ".venv",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "logs",
    "docs",
    "libraries",
    "storage",
    "trash",
    "scripts",
    ".cursor",
    ".vscode",
    ".claude",
    ".github",
]
reportMissingTypeStubs = true
reportUnknownParameterType = true
reportUnknownArgumentType = true
reportUnknownMemberType = true
reportUnknownVariableType = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
reportMissingSuperCall = false
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true
